# shadow-ai-discovery

./: .gitignore  ARCHITECTURE.md  DESIGN.md  PRODUCT.md  README.md  demo.sh  docker-compose.example.yml  run_dev.sh
.github/workflows/: deploy.yml.example
backend/: Dockerfile.example  pyproject.toml  requirements.txt  run_gcp_demo.sh
backend/app/: config.py  database.py  main.py  models.py
backend/app/routes/: agents.py  assets.py  scans.py
backend/app/services/: heuristics.py  scanner.py
backend/tests/: conftest.py  test_heuristics.py  test_scan_api.py  test_scanner.py
frontend/: Dockerfile.example  index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
frontend/src/styles/: index.css
infra/: main.tf  outputs.tf  variables.tf
